2006-12-20  MORIOKA Tomohiko  <tomo@kanji.zinbun.kyoto-u.ac.jp>

	* README.ja, README.en (Installation): Update required version of
	APEL to 10.7 or later.

	* FLIM-CFG (PACKAGEDIR): Use
	`install-get-default-package-directory'.

2006-12-13  Katsumi Yamaoka  <yamaoka@jpl.org>

	* FLIM-CFG (PACKAGEDIR): Avoid an error with Emacs.

2006-12-12  Katsumi Yamaoka  <yamaoka@jpl.org>

	* FLIM-MK (compile-flim-package): Use
	batch-update-directory-autoloads if it is available instead of
	batch-update-directory.

2006-12-11  Katsumi Yamaoka  <yamaoka@jpl.org>

	* FLIM-CFG (PACKAGEDIR): Check for
	(early|late|last)-package-hierarchies and configure-package-path
	as well as (early|late|last)-packages.

2006-09-24  Daiki Ueno  <ueno@unixuser.org>

	* smtp.el (smtp-progress-message-format): Abolished; reverted the
	change 2004-08-11  Katsumi Yamaoka  <yamaoka@jpl.org>.

2006-09-24  Daiki Ueno  <ueno@unixuser.org>

	* smtp.el (smtp-end-of-line): Abolished; reverted the change
	2002-07-24 Katsumi Yamaoka <yamaoka@jpl.org>.

2006-06-15  Yoichi NAKAYAMA  <yoichi@geiin.org>

	* smtp.el (smtp-submit-package): Ignore error in
	`smtp-primitive-quit' where SMTP mail transaction is completed.

2006-06-12  Hiroya Murata  <lapis-lazuli@pop06.odn.ne.jp>

	* mel-b-ccl.el (base64-ccl-insert-encoded-file): Use
	`insert-file-contents-as-binary' instead of `insert-file-contents'.

	* mel-q-ccl.el (quoted-printable-ccl-insert-encoded-file):
	Likewise.

2006-02-18  Hiroya Murata  <lapis-lazuli@pop06.odn.ne.jp>

	* smtp.el (smtp-debug): New user option.
	(smtp-read-response): Treat a line break code loosely.  If
	smtp-debug is non-nil, show an invalid response.

2005-12-25  Katsumi Yamaoka  <yamaoka@jpl.org>

	* eword-decode.el: Change the way to decode successive
	encoded-words: decode B- or Q-encoding in each encoded-word,
	concatenate them, and decode it as charset.  See the following
	threads for more information:
	http://news.gmane.org/group/gmane.emacs.pretest.bugs/thread=9541